# FastAPI

./: .coverage  .env  .gitignore  Dockerfile  README.md  compose.yaml  database.db  fly.toml  main.py  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
.github/workflows/: pipeline.yaml
alembic/: env.py
fast_zero/: app.py  database.py  models.py  schemas.py  security.py
fast_zero/routers/: auth.py  todos.py  users.py
migrations/: env.py
migrations/versions/: bb77f9679811_ex_02_aula_04.py  de865434f506_create_todos_table.py
tests/: conftest.py  test_app.py  test_auth.py  test_db.py  test_security.py  test_todos.py  test_users.py
