[project]
name = "fast-zero"
version = "0.1.0"
description = ""
authors = [
    {name = "Renata Klaine",email = "renataklaine@outlook.com.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
    "alembic (>=1.16.2,<2.0.0)",
    "fastapi[standard] (>=0.115.14,<0.116.0)",
    "pwdlib[argon2] (>=0.2.1,<0.3.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "pyjwt (>=2.10.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.41,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)",
    "tzdata (>=2025.2,<2026.0)",
    "fastapi-pagination (>=0.13.3,<0.14.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"
ruff = "^0.11.10"
sqlalchemy = "^2.0.41"
pytest-asyncio = "^1.0.0"
factory-boy = "^3.3.3"
freezegun = "^1.5.3"
testcontainers = "^4.12.0"

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT', 'FAST']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
asyncio_default_fixture_loop_scope = 'function'

[tool.taskipy.tasks]
lint = 'ruff check'
pre_format = 'ruff check --fix'
format = 'ruff format'
run = 'fastapi dev fast_zero/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_zero -vv'
post_test = 'coverage html'

[tool.poetry.plugins."console_scripts"]
task = "taskipy.cli:task"

[tool.coverage.run]
concurrency = ["thread", "greenlet"]
